AR_RU_08 : Newsletter : Replaced label with div

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 </div>
 
                 <form class="newsletter__form">
-                    <label class="newsletter__input">
+                    <div class="newsletter__input">
                         <i
                             class="icon-Vector-8 newsletter__mail-icon"
                             aria-hidden="true"
@@ -673,7 +673,7 @@
                             name="email"
                             aria-label="Email address"
                         />
-                    </label>
+                    </div>
                     <button
                         class="button--primary button newsletter__button"
                         type="submit"
